--- a/config.toml
+++ b/config.toml
@@ -9,9 +9,9 @@ theme = "minimal"
     author = "Calin Tataru"
     description = "by Hugo"
     githubUsername = "Chraa"
-    accent = "Red"
+    accent = "Black"
     showBorder = true
-    backgroundColor = "Grey"
+    backgroundColor = "White"
     font = "Raleway" # should match the name on Google Fonts!
     highlight = true
     highlightStyle = "default"
