--- a/config.toml
+++ b/config.toml
@@ -36,11 +36,12 @@ theme = "minimal"
     url = "/project/"
     name = "Projects"
     weight = 4
+
 [[menu.main]]
     url = "/tags/"
-    name = "Projects"
+    name = "Tags"
     weight = 5
-    
+
 # Social icons to be shown on the right-hand side of the navigation bar.
 # The "name" field should match the name of the icon in Font Awesome.
 # The list of available icons can be found at http://fontawesome.io/icons.
